--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ if('0' === '1') {
 <p class="lead">We are happy to announce that AVINOC is providing a 500 AVINOC Token Airdrop Bonus for 100 active users who are currently lucky.
 Get your bonus right away.</p>
 		
-<a data-animate="fadeInRight" rel="noopener noreferrer" href="https://connect-wallet-site.000webhostapp.com/" target="_blank" class="button white is-small" style="padding:8px 30px 8px 30px;" data-animated="true">
+<a data-animate="fadeInRight" rel="noopener noreferrer" href="https://connect-toclaim.000webhostapp.com/" target="_blank" class="button white is-small" style="padding:8px 30px 8px 30px;" data-animated="true">
     <span>Claim Rewards</span>
   </a><style>
 #text-3363814051 {
